@@ -1,12 +1,28 @@
 --- #YAML:1.0
-name:                Algorithm-Numerical-Sample
-version:             2009040301
-abstract:            ~
-license:             ~
-author:              ~
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
+name:               Algorithm-Numerical-Sample
+version:            2009102701
+abstract:           Draw samples from a set
+author:
+    - Abigail <cpan@abigail.be>
+license:            mit
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    perl:  5.006
+resources:
+    repository:  git://github.com/Abigail/algorithm--numerical--sample.git
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
+keywords:
+    - algorithm
+    - numerical
+    - sample
